--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "access_user_profile",
       "access_heart_rate",
       "access_internet",
+      "access_location",
       "run_background"
     ],
     "buildTargets": [
